# pkgupd

./: .gitignore  CMakeLists.txt  README.md  bootstrap.yml  config-x86_64.yml  config.hh  define.hxx.in  go.mod  go.sum  inside-docker.sh  main.cc  main.go  pkgupd-here.sh  port-compiler  recipe.hh  recipe.yml
.devcontainer/: devcontainer.json
Source/: CMakeLists.txt
Source/ArchiveManager/: ArchiveManager.cxx  ArchiveManager.hxx  CMakeLists.txt
Source/ArchiveManager/AppImage/: AppImage.cxx  AppImage.hxx  CMakeLists.txt
Source/ArchiveManager/Squashfs/: CMakeLists.txt  Squashfs.cxx  Squashfs.hxx
Source/ArchiveManager/Tarball/: CMakeLists.txt  Tarball.cxx  Tarball.hxx
Source/Builder/: Builder.cxx  Builder.hxx  CMakeLists.txt
Source/Builder/Compiler/: CMakeLists.txt  Compiler.hxx
Source/Builder/Compiler/AutoConf/: AutoConf.cxx  AutoConf.hxx  CMakeLists.txt
Source/Builder/Compiler/CMake/: CMake.cxx  CMake.hxx  CMakeLists.txt
Source/Builder/Compiler/Cargo/: CMakeLists.txt  Cargo.cxx  Cargo.hxx
Source/Builder/Compiler/Go/: CMakeLists.txt  Go.cxx  Go.hxx
Source/Builder/Compiler/Makefile/: CMakeLists.txt  Makefile.cxx  Makefile.hxx
Source/Builder/Compiler/Meson/: CMakeLists.txt  Meson.cxx  Meson.hxx
Source/Builder/Compiler/Pysetup/: CMakeLists.txt  Pysetup.cxx  Pysetup.hxx
Source/Builder/Compiler/Script/: CMakeLists.txt  Script.cxx  Script.hxx
Source/Builder/Compiler/System/: CMakeLists.txt  System.cxx  System.hxx
Source/Bundler/: Bundler.cxx  Bundler.hxx  CMakeLists.txt
Source/Configuration/: CMakeLists.txt  Configuration.cxx  Configuration.hxx
Source/Container/: CMakeLists.txt  Container.cxx  Container.hxx
Source/Downloader/: CMakeLists.txt  Downloader.cxx  Downloader.hxx
Source/Executor/: CMakeLists.txt  Executor.hxx
Source/Installer/: CMakeLists.txt  Installer.cxx  Installer.hxx
Source/Installer/appimage-installer/: appimage-installer.cxx  appimage-installer.hxx
Source/Installer/machine-installer/: machine-installer.cxx  machine-installer.hxx
Source/Installer/package-installer/: package-installer.cxx  package-installer.hxx
Source/Package/: CMakeLists.txt  Group.cxx  Group.hxx  Package.cxx  Package.hxx  User.cxx  User.hxx
Source/Recipe/: CMakeLists.txt  Recipe.cxx  Recipe.hxx
Source/Repository/: CMakeLists.txt  Repository.cxx  Repository.hxx
Source/Repository/Source/: source-repository.cxx  source-repository.hxx
Source/Repository/System/: system-database.cxx  system-database.hxx
Source/Resolver/: CMakeLists.txt  Resolver.cxx  Resolver.hxx
Source/Stripper/: CMakeLists.txt  Stripper.cxx  Stripper.hxx
Source/Triggerer/: CMakeLists.txt  Triggerer.cxx  Triggerer.hxx
Source/Uninstaller/: CMakeLists.txt  Uninstaller.cxx  Uninstaller.hxx
Source/Utilities/: CMakeLists.txt  Utilities.cxx  Utilities.hxx
Source/main/: pkgupd-autoremove.cxx  pkgupd-build.cxx  pkgupd-cleanup.cxx  pkgupd-depends.cxx  pkgupd-info.cxx  pkgupd-inject.cxx  pkgupd-installer.cxx  pkgupd-meta.cxx  pkgupd-owner.cxx  pkgupd-regenerate.cxx  pkgupd-remove.cxx  pkgupd-revdep.cxx  pkgupd-run.cxx  pkgupd-search.cxx  pkgupd-sync.cxx  pkgupd-trigger.cxx  pkgupd-update.cxx  pkgupd-watchdog.cxx  pkgupd.cxx
builder/: builder.cc  builder.go  compiler.cc  compiler.hh  recipe.hh
compiler/: compiler.hh  plugin.hh
config/: config.go  config_test.go  sample.yml
database/: database.hh
include/: ini.h
installer/: installer.hh  plugin.hh
libpkgupd/: Archive.cc  Archive.hh  Builder.cc  Builder.hh  Colors.hh  Command.cc  Command.hh  Compiler.cc  Compiler.hh  Database.hh  (+80 more)
src/: ArchiveManager.cpp  ArchiveManager.h  Builder.cpp  Builder.h  CMakeLists.txt  Colors.h  Configuration.cpp  Configuration.h  Container.cpp  Container.h  Deployment.cpp  Downloader.cpp  Downloader.h  Engine.cpp  Engine.cxx  Engine.h  Engine.hxx  Execute.h  Executor.cpp  Executor.h  Hash.cpp  Hash.h  Http.cpp  Http.h  Ignite.cpp  Ignite.h  MetaInfo.cpp  MetaInfo.cxx  MetaInfo.h  MetaInfo.hxx  Repository.cpp  Repository.h  Resolver.h  SysImage.cpp  SysImage.h  SysUpgrade.cpp  SysUpgrade.h  Sysroot.cpp  Sysroot.h  SystemDatabase.cpp  (+36 more)
src/ArchiveManager/: ArchiveManager.cxx  ArchiveManager.hxx
src/Builder/: Builder.cxx  Builder.hxx  Bundler.cxx  Stripper.cxx  Stripper.hxx
src/Command/: Command.cxx  Command.hxx
src/Installer/: installer.cxx  installer.hxx
src/Trigger/: Trigger.cxx  Trigger.hxx
src/Uninstaller/: Uninstaller.cxx  Uninstaller.hxx
src/archive-manager/: archive-manager.cxx  archive-manager.hxx
src/archive-manager/appimage/: appimage.cxx  appimage.hxx
src/archive-manager/squash/: squash.cxx  squash.hxx
src/archive-manager/tarball/: tarball.cxx  tarball.hxx
src/builder/: builder.cxx  builder.hxx  bundler.cxx  bundler.hxx  stripper.cxx
src/cmd/: pkgupd-autoremove.cxx  pkgupd-build.cxx  pkgupd-cleanup.cxx  pkgupd-depends.cxx  pkgupd-info.cxx  pkgupd-inject.cxx  pkgupd-installer.cxx  pkgupd-meta.cxx  pkgupd-owner.cxx  pkgupd-regenerate.cxx  pkgupd-remove.cxx  pkgupd-revdep.cxx  pkgupd-run.cxx  pkgupd-search.cxx  pkgupd-sync.cxx  pkgupd-trigger.cxx  pkgupd-update.cxx  pkgupd.cxx
src/compilers/: autoconf.cxx  autoconf.hxx  cargo.cxx  cargo.hxx  cmake.cxx  cmake.hxx  go.cxx  go.hxx  makefile.cxx  makefile.hxx  meson.cxx  meson.hxx  pysetup.cxx  pysetup.hxx  script.cxx  script.hxx  system.cxx  system.hxx
src/installer/: installer.cxx  installer.hxx
src/installer/appimage-installer/: appimage-installer.cxx  appimage-installer.hxx
src/installer/machine-installer/: machine-installer.cxx  machine-installer.hxx
src/installer/package-installer/: package-installer.cxx  package-installer.hxx
src/uninstaller/: uninstaller.cxx  uninstaller.hxx
src/utils/: utils.cxx  utils.hxx
tests/: CMakeLists.txt  CommandTest.cc  Executor.cpp  common.h  common.hh  merge.cpp  pkgupd_test.cpp  recipe.cc  resolve.cc  rlxArchiveTest.cc  test_builder.cc  test_builder.cxx  test_get_version.cc  test_get_version.cxx  test_recipe.cc  test_recipe.cxx  test_stripper.cc  test_stripper.cxx  test_system_image.sh  test_tarball.cc  test_tarball.cxx  triggers.cc
tests/data/: test-package-0.1.0.rlx
(+251 files in other folders)
